--- a/templates/base.html
+++ b/templates/base.html
@@ -15,12 +15,14 @@
   <link href="static/bootstrap3/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
    <link href="static/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
   <link href="static/bootstrap3/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+    <link href="static/bootstrap3/plugins/bootstrap-colorpicker2/css/colorpicker.css" rel="stylesheet" type="text/css"/>
   <link href="static/bootstrap3/plugins/uniform/css/uniform.default.css" rel="stylesheet" type="text/css"/>
   <!-- END GLOBAL MANDATORY STYLES -->
   <!-- BEGIN PAGE LEVEL PLUGIN STYLES -->
 
   <link href="static/bootstrap3/plugins/gritter/css/jquery.gritter.css" rel="stylesheet" type="text/css"/>
   <link href="static/bootstrap3/plugins/bootstrap-daterangepicker/daterangepicker-bs3.css" rel="stylesheet" type="text/css"/>
+
   <link rel="stylesheet" href="static/css/bootstrap-wysihtml5.css">
   <link href="static/bootstrap3/plugins/fullcalendar/fullcalendar/fullcalendar.css" rel="stylesheet" type="text/css"/>
   <link href="static/bootstrap3/plugins/jqvmap/jqvmap/jqvmap.css" rel="stylesheet" type="text/css"/>
@@ -305,6 +307,7 @@
   <script src="static/app/scripts/vendor/ui-bootstrap-tpls-0.5.0.js"></script>
   <script src="static/app/scripts/vendor/moment.min.js"></script>
   <script src="static/app/scripts/vendor/datetimepicker.js"></script>
+  <script src="static/bootstrap3/plugins/bootstrap-colorpicker2/js/bootstrap-colorpicker.js" type="text/javascript"></script>
 
 
 
