--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -196,7 +196,7 @@
             <div class="inner-cards-container">
             
               <div ng-repeat="lead in leads" class="col-lg-3 col-md-3 col-sm-6 col-xs-12" >
-                <div class="dashboard-stat cards-med">
+                <div class="dashboard-stat cards-small">
                   
                   <div class="details">
                     <a href="/#/leads/show/<%= lead.id %>"><h2 class="cardTitle">
