--- a/templates/accounts/show.html
+++ b/templates/accounts/show.html
@@ -411,23 +411,21 @@
            </div>
        </div>
     <!--End Contact Modal -->
-
-
                       </div>
-                      <div class="tab-pane active" id="tab_1_4" ng-show="selectedTab == 4">
-                          
-                         <div class="row cards-container">
+                  <div class="tab-pane active" id="tab_1_4" ng-show="selectedTab == 4">
+                         
+                         <div class="row cards-container">     
                          <div class="btn-group relbutton">
-            
                                 <button  ng-click="addNeedModal()" id="sample_editable_1_new" class="btn red">
-                                {{_("Add a new Need")}} <i class="icon-plus"></i>
-                                </button>
-                          </div>
-                            <div class="col-md-12">
+                               {{_("Add a new Need")}}<i class="icon-plus"></i>
+                                </button>                                
+                         </div>                     
+
+                           <div class="col-md-12">
                             <div class="inner-cards-container">
-                                                        
-                             <div  class="col-md-4 responsive" ng-repeat="need in needs" data-tablet="span6" data-desktop="span4">
+                              <div  class="col-md-4" ng-repeat="need in needs">
                                 <div class="dashboard-stat cards-small">
+
                                   
                                   <div class="details">
                                     <a href="/#/needs/show/<%= need.id %>"><h3 class="relatedcardOppTitle">
@@ -440,8 +438,10 @@
                                     
                                     </div>
                                   </div>
-                                                 
+                                 
+                                    <div class="clearfix"></div>               
                                 </div>
+                                     
                               </div>
                               <div ng-show="blankStateneeds" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12">
                                 <div class="dashboard-stat cards">
@@ -456,18 +456,18 @@
                                         
                                 </div>
                               </div>
-
+                              <br>
+                              
                               <div class="clearfix"></div>
-                            </div><!--/inner-cards-container-->
+                              </div><!--/inner-cards-container-->
+                              </div>
                             </div>
-                            </div>
-                          
-                          <div class="row">
-                               <div class="md-col-12">
+                            <div class="row">
+                             <div class="col-md-12">
                                 <div class="pagination pull-right" ng-hide="isLoading">
                                       
-                                     
-                                   <button ng-click="NeedPrevPageItems()" id="sample_editable_1_new" class="btn" ng-show="needspagination.prev">
+                                      
+                                        <button ng-click="NeedPrevPageItems()" id="sample_editable_1_new" class="btn" ng-show="needspagination.prev">
                                         {{_("Prev")}} 
                                         </button>
                                         
@@ -477,75 +477,55 @@
                                       
                                     </div>
                                     <h3 class="pagination pull-right" ng-show="isLoading">{{ _("Loading...") }}</h3>
-                                </div>
-                          </div>
+                              </div>
+                              </div>
+                        <!--HKA 18.11.2013 Add Contact modal -->
 
-                      <!--HKA 19.11.2013 Case Modal -->
-                <div id="addNeedModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                <div class="modal-dialog">
+                    <div id="addContactModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" >
+                    <div class="modal-dialog">
                       <div class="modal-content">
                         <div class="modal-header">
-                          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                          <h3 id="myModalLabel" class="modal-title">{{_("Add new Customer Needs")}}</h3>
+                          <button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
+                          <h3 id="myModalLabel" class="modal-title">{{_("New Contact")}}</h3>
                         </div>
-                          <div class="modal-body">
-                             <form id="addCase" name="addCase" ng-submit="saveNeed(need)" class="form-horizontal">             
-                                <div class="form-group">
-                                    <label  class="required col-md-3 control-label">{{_("Subject of the need")}} </label>
-                                   
-                                    <div class="col-md-9">
-                                      <input type="text" class="form-control" id="id_name" ng-model="need.name">
-                                      
-                                    </div>
-                                </div>
-                                 <div class="form-group">
-                                    <label  class="required col-md-3 control-label">{{_("More details about this need")}} </label>
-                                   
-                                    <div class="col-md-9">
-                                       <textarea id="noteBody" class="form-control ng-pristine ng-valid" rows="3" ng-model="need.description"></textarea>
-                                      
-                                    </div>
-                                </div>
-                               
-                                <div class="form-group">
-                                    <label  class="required col-md-3 control-label">{{_("How is important for your customer?")}} </label>
-                                   
-                                    <div class="col-md-9">
-                                      <select class="form-control" ng-model="need.priority">
-                                        <option >Low</option>
-                                        <option >Medium</option>
-                                        <option >High</option>
-                                      </select>
-                                      
-                                    </div>
-                                </div>
-                                
-                                <div class="form-group">
-                                    <label  class="required col-md-3 control-label">{{_("Status")}}</label>
-                                   
-                                    <div class="col-md-9">
-                                      <select class="form-control" ng-model="need.need_status">
-                                        <option value="pending">Hypothese to test</option>
-                                        <option value="testing">Testing</option>
-                                        <option value="validated">Validated</option>
-                                        <option value="rejected">Rejected</option>
-                                      </select>
-                                      
-                                    </div>
-                                  
-                                </div>
-                          </div>
+                        <div class="modal-body">
+                            <form id="addContact" name="addcontact"  ng-submit="savecontact(contact)" class="form-horizontal" role="form"> 
+                            <div class="form-group">
+                              <label  class="required col-md-3 control-label">{{_("First Name")}} *</label>
+                       
+                              <div class="col-md-9">
+                              <input class="form-control" type="text" required id="id_firstname" ng-model="contact.firstname">
+                          
+                               </div>
+                            </div>
+                           <div class="form-group">
+                              <label  class="required col-md-3 control-label">{{_("Last Name")}}</label>
+                              <div class="col-md-9">
+                              <input class="form-control" type="text"  id="id_lastname" ng-model="contact.lastname">
+                          
+                              </div>
+                           </div>
+                           <div class="form-group">
+                             <label  class="required col-md-3 control-label">{{_("Position")}} </label>
+                       
+                             <div class="col-md-9">
+                              <input class="form-control" type="text"  id="id_account" ng-model="contact.title">
+                          
+                              </div>
+                           </div>                
+              </div>
               <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
-                <button  type="submit" class="btn green addContactNow">{{_("Add this need")}}</button>
+                <button  type="submit" class="btn green addContactNow">{{_("Add Contact")}}</button>
               </div>
                </form>
-               </div>
-               </div>
+             </div>
+           </div>
        </div>
-               
-                      <!--HKA 19.11.2013  End Case Modal -->
+    <!--End Contact Modal -->
                       </div>
+ 
+
                        <div class="tab-pane active" id="tab_1_5" ng-show="selectedTab == 5">
                           
                          <div class="row cards-container">
