--- a/templates/accounts/show.html
+++ b/templates/accounts/show.html
@@ -479,51 +479,73 @@
                                     <h3 class="pagination pull-right" ng-show="isLoading">{{ _("Loading...") }}</h3>
                               </div>
                               </div>
-                        <!--HKA 18.11.2013 Add Contact modal -->
-
-                    <div id="addContactModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" >
-                    <div class="modal-dialog">
+                          <!--HKA 19.11.2013 Need Modal -->
+                <div id="addNeedModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
                       <div class="modal-content">
                         <div class="modal-header">
-                          <button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
-                          <h3 id="myModalLabel" class="modal-title">{{_("New Contact")}}</h3>
+                          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                          <h3 id="myModalLabel" class="modal-title">{{_("Add new Customer Needs")}}</h3>
                         </div>
-                        <div class="modal-body">
-                            <form id="addContact" name="addcontact"  ng-submit="savecontact(contact)" class="form-horizontal" role="form"> 
-                            <div class="form-group">
-                              <label  class="required col-md-3 control-label">{{_("First Name")}} *</label>
-                       
-                              <div class="col-md-9">
-                              <input class="form-control" type="text" required id="id_firstname" ng-model="contact.firstname">
-                          
-                               </div>
-                            </div>
-                           <div class="form-group">
-                              <label  class="required col-md-3 control-label">{{_("Last Name")}}</label>
-                              <div class="col-md-9">
-                              <input class="form-control" type="text"  id="id_lastname" ng-model="contact.lastname">
-                          
-                              </div>
-                           </div>
-                           <div class="form-group">
-                             <label  class="required col-md-3 control-label">{{_("Position")}} </label>
-                       
-                             <div class="col-md-9">
-                              <input class="form-control" type="text"  id="id_account" ng-model="contact.title">
-                          
-                              </div>
-                           </div>                
-              </div>
+                          <div class="modal-body">
+                             <form id="addCase" name="addCase" ng-submit="saveNeed(need)" class="form-horizontal">             
+                                <div class="form-group">
+                                    <label  class="required col-md-3 control-label">{{_("Subject of the need")}} </label>
+                                   
+                                    <div class="col-md-9">
+                                      <input type="text" class="form-control" id="id_name" ng-model="need.name">
+                                      
+                                    </div>
+                                </div>
+                                 <div class="form-group">
+                                    <label  class="required col-md-3 control-label">{{_("More details about this need")}} </label>
+                                   
+                                    <div class="col-md-9">
+                                       <textarea id="noteBody" class="form-control ng-pristine ng-valid" rows="3" ng-model="need.description"></textarea>
+                                      
+                                    </div>
+                                </div>
+                               
+                                <div class="form-group">
+                                    <label  class="required col-md-3 control-label">{{_("How is important for your customer?")}} </label>
+                                   
+                                    <div class="col-md-9">
+                                      <select class="form-control" ng-model="need.priority">
+                                        <option >Low</option>
+                                        <option >Medium</option>
+                                        <option >High</option>
+                                      </select>
+                                      
+                                    </div>
+                                </div>
+                                
+                                <div class="form-group">
+                                    <label  class="required col-md-3 control-label">{{_("Status")}}</label>
+                                   
+                                    <div class="col-md-9">
+                                      <select class="form-control" ng-model="need.need_status">
+                                        <option value="pending">Hypothese to test</option>
+                                        <option value="testing">Testing</option>
+                                        <option value="validated">Validated</option>
+                                        <option value="rejected">Rejected</option>
+                                      </select>
+                                      
+                                    </div>
+                                  
+                                </div>
+                          </div>
               <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
-                <button  type="submit" class="btn green addContactNow">{{_("Add Contact")}}</button>
+                <button  type="submit" class="btn green addContactNow">{{_("Add this need")}}</button>
               </div>
                </form>
-             </div>
-           </div>
+               </div>
+               </div>
        </div>
-    <!--End Contact Modal -->
+               
+                      <!--HKA 19.11.2013  End Need Modal -->
                       </div>
+                    
  
 
                        <div class="tab-pane active" id="tab_1_5" ng-show="selectedTab == 5">
