fix bug UI filter and Order on lead list

--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -146,7 +146,7 @@
             <!-- Filtering and sorting -->
           <div class="row filter-row" ng-show="leads+isFiltering">
             <div class="col-md-2">
-              <div class="btn-group">
+              <div class="btn-group btn-filter">
                   <a class="btn btn-default" href="#" data-toggle="dropdown">
                     {{ _('Filter by') }}
                   <i class="icon-angle-down"></i>
@@ -170,7 +170,7 @@
                     </form>
             </div>
             <div class="col-md-3"> 
-            <div class="btn-group">
+            <div class="btn-group btn-sort" >
                                     <a class="btn btn-default" href="#" data-toggle="dropdown">
                                     Sort by
                                     <i class="icon-angle-down"></i>
