--- a/templates/contacts/show.html
+++ b/templates/contacts/show.html
@@ -536,7 +536,10 @@
                     <div class="form-group">
                         <label  class="required col-md-3 control-label">{{_("Stage")}} </label>
                         <div class="col-md-9">
-                        <input type="text" class="form-control" id="id_stage" ng-model="opportunity.stage">
+                       <select ng-model="stage_selected" class="form-control" ng-options="opps.name + ' - ( ' + opps.probability + '% )' for opps in opportunitystages | orderBy: 'name':true"  >
+                            <option value="">-- choose Stage --</option>
+                          
+                          </select>
                         </div>
                     </div>                 
                   
@@ -648,7 +651,18 @@
                         <label  class="required col-md-3 control-label">{{_("Priority")}} </label>
                        
                         <div class="col-md-9">
-                          <input type="text" class="form-control"  id="id_priority" ng-model="casee.priority">
+                           <select class="form-control" ng-model="casee.priority">
+                            <option value="1">1 - Low</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            <option value="6">6</option>
+                            <option value="7">7</option>
+                            <option value="8">8</option>
+                            <option value="9">9</option>
+                            <option value="10">10 - Critical</option>
+                          </select>
                           
                         </div>
                     </div>
@@ -657,7 +671,10 @@
                         <label  class="required col-md-3 control-label">{{_("Status")}}</label>
                        
                         <div class="col-md-9">
-                          <input type="text" class="form-control"  id="id_status" ng-model="casee.statuss">
+                            <select  class="form-control" ng-model="status_selected" ng-options="stat.status for stat in casesatuses" >
+                            <option value="">Choose Status</option>
+                            <!--option value=""><%=status_selected.status%></option-->
+                          </select>
                           
                         </div>
                       
